--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,7 +1,21 @@
 {
-  "Please_sign_in": "請登入。",
-  "Email_address": "輸入電子郵件",
-  "Password": "輸入密碼",
-  "Show_password": "顯示密碼",
-  "Sign_in": "登入"
+  "Landing": {
+    "about": "ABOUT",
+    "skill": "SKILL",
+    "project": "PROJECT",
+    "resume": "RESUME",
+    "contact": "CONTACT"
+  },
+  "Contact": {
+    "title": "CONTACT ME",
+    "placeholder": {
+      "name": "Name",
+      "email": "Email",
+      "message": "Message"
+    },
+    "send": "Send"
+  },
+  "Resume": {
+    "download": "DOWNLOAD"
+  }
 }
