--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -1,10 +1,23 @@
 {
   "Landing": {
+    "home": "首頁",
     "about": "關於",
     "skill": "技能",
     "project": "專案",
     "resume": "履歷",
     "contact": "與我聯絡"
+  },
+  "Skill": {
+    "title": "技能",
+    "front-end": "前端",
+    "back-end": "後端",
+    "others": "其他"
+  },
+  "Project": {
+    "title": "專案",
+    "csd": "智慧農業國際商情平台",
+    "web": "個人網站",
+    "smpa": "美廉社銷貨系統"
   },
   "Contact": {
     "title": "與我聯絡",
@@ -17,5 +30,16 @@
   },
   "Resume": {
     "download": "下載"
+  },
+  "About": {
+    "title": "范雅棠 Cynthia",
+    "career": "前端工程師",
+    "location": "台灣，台北",
+    "email": "cynthiafan1230@gmail.com",
+    "description": "喜好學習新知識與新技術，時常關注與鑽研新的事物，覺得在這個技術進步快速的時代，若不能進步就是退步，因此期許自己對任何事物要保持一定的好奇心。然而從行銷轉行寫程式之後，深刻感受每個程式都是為了化繁為簡而存在的工具，所以非常要求自己寫出簡明的程式碼。目前以前端技術為主，同時也對無關於畫面美觀的後端抱持濃厚的興趣，喜歡在閒暇時寫寫不同的程式。",
+    "btn": {
+      "resume": "我的履歷",
+      "contact": "與我聯絡"
+    }
   }
 }
